# CAELUS_DigitalTwin

./: .gitignore  Dockerfile  README.md  Telemetry_pb2_grpc.py  aeroacoustic_test_id_2021-11-17 12:43:36.130531.ost  aeroacoustic_test_id_2021-11-17 12:47:05.276694.ost  aeroacoustic_test_id_2021-11-17 15:05:59.689334.ost  aeroacoustic_test_id_2021-11-17 15:13:01.507542.ost  aeroacoustic_test_id_2021-11-17 17:34:13.277573.ost  build_and_upload_to_registry.sh  config_2.json  create_px4_vehicles.py  display_plots.py  example.py  example_sim_config.json  example_weather_data.json  get_px4_fork.sh  gui_layout.ini  install_all.sh  install_py_deps.sh  install_simulator.sh  mission.json  mission_6b00f6e5-aefd-4238-ab13-77e0060982f0.txt  mission_6b00f6e5-aefd-4238-ab13-77e0060982f0.txt.REMOVED.git-id  mission_constant_alt.json  mission_generator.py  mission_some_id.txt.REMOVED.git-id  prepare_venv.sh  process_grep.py  propeller_helper.py  px4_python_requirements.txt  requirements.txt  smartskies_utils.py  start.py  sync_custom_px4_vehicles.py
6-dof-simulator/: .gitignore  .gitrepo
CAELUS_PowerModels/: setup.py
CAELUS_ProbeSystem/: .gitrepo  README.md  start.py
CAELUS_SmartSkies/: README.md  setup.py
CAELUS_ThermalModel/: requirements.txt
Dependencies/Simulator/: .gitrepo  CMakeLists.txt  README.md  setup.sh
Dependencies/Simulator/Examples/: calibrate_compass.cc  manouvre_plan_example.cc
Dependencies/Simulator/drone_models/: fixed_wing  jmav  small
Dependencies/Simulator/mavlink/common/: common.h
Dependencies/Simulator/mavlink/standard/: standard.h
Dependencies/Simulator/src/: Ailerons.cc  Ailerons.h  Drone.cc  Drone.h  DroneSensors.cc  DroneSensors.h  Sim6DOFInfo.h.in  Simulator.cc  StandaloneDrone.h  error_messages.h  main.cc
Dependencies/Simulator/src/C/: communication.c  communication.h  remote.h  sock.c  sock.h
Dependencies/Simulator/src/ClassExtensions/: Aerodynamics_Extension.h  FixedWingEOM_Extension.h  ThrustFixedWing_Extension.h
Dependencies/Simulator/src/Controllers/: DroneController.h  PropellerContro.h  SimpleFixedWingController.h
Dependencies/Simulator/src/ESCs/: QuadrotorESC.h  SimpleFixedWingESC.h
Dependencies/Simulator/src/ForceModels/: Drag.h  ThrustFixedWing.h  ThrustQuadrotor.h
Dependencies/Simulator/src/Helpers/: angleRateRotationMatrix.cc  angleRateRotationMatrix.h  baro_utils.h  caelusFdmConstants.h  caelusFdmTypedefs.h  constants.h  http_req.h  magnetic_field_lookup.cc  magnetic_field_lookup.h  rotationMatrix.cc  rotationMatrix.h
Dependencies/Simulator/src/Interfaces/: Alive.h  AsyncDroneControl.h  Clock.h  DataReceiver.h  DroneController.h  DroneStateEncoder.h  DroneStateProcessor.h  DynamicObject.h  Environment.h  Logger.h  MAVLinkMessageRelay.h  MAVLinkSystem.h  PrettyPrintable.h  Sensor.h  Sensors.h
Dependencies/Simulator/src/Logging/: DroneStateLogger.h  GodotRouter.h
Dependencies/Simulator/src/MagneticModel/: WMM.cc
Dependencies/Simulator/src/Sockets/: MAVLinkConnectionHandler.cc  MAVLinkConnectionHandler.h  TCPAcceptor.cc  TCPAcceptor.h  TCPConnection.h  UDPSender.h
Dependencies/Simulator/tools/config_gen/: config_gen.py
DigitalTwin/: CAELUSSimulationStack.py  DroneCommander.py  DroneController.py  ExitHandler.py  MissionProgressMonitor.py  MissionWriter.py  MongoDBWriter.py  (+11 more)
(+189 files in other folders)
